--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,38 @@ main {
     display: flex;
     align-items: center;
     height: 100%;
-    gap: 1rem;
+    gap: 1em;
+}
+
+.links a {
+    color: var(--color-principal);
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 1.1rem;
+    position: relative;
+    padding: 0.25rem 0;
+    transition: all 0.3 ease;
+}
+
+.links a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0%;
+    height: 2px;
+    background-color: var(--color-principal);
+    transition: width 0.3s ease;
+
+}
+
+.links a:hover::after {
+    width: 100%
+}
+
+.links a:hover {
+    color: var(--color-principal);
+    transform: translateY(-2px);
 }
 
 .moto {
@@ -106,4 +137,30 @@ main {
         width: 100%;
         height: auto;
     }
+}
+
+
+
+
+#imagenConstruccion {
+    background-image: url("../img/flatten.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+}
+
+#imagenConstruccion h1 {
+    color: white;
+    background-color: rgba(0,0,0,0.6);
+    padding: 1rem 2rem;
+    border-radius: 12px;
+    text-align: center;
+    margin: 0;
+    font-size: 3rem;
+    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
+    transform: translateY(-250px);
 }
